@@ -2,7 +2,14 @@
 
 set -eu
 
+TMP="/dev/shm/"
+
+rm -rf "$TMP/aeron"*
+rm -rf "$TMP/fix"*
+
 java \
+  -verbose:gc \
+  -XX:+PrintGCDetails \
   -XX:+UnlockCommercialFeatures \
   -XX:+UnlockDiagnosticVMOptions \
   -XX:+DebugNonSafepoints \
